--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "next": "15.3.3",
+    "postcss": "^8.5.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "daisyui": "^4.11.1",
+    "@tailwindcss/postcss": "^4.1.8",
+    "daisyui": "^5.0.43",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4.1.8"
+    "eslint-config-next": "15.3.3"
   }
 }
