--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.9.1",
+    "@vercel/analytics": "^1.5.0",
     "mongodb": "^6.17.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
