--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.9.1",
     "@vercel/analytics": "^1.5.0",
+    "google": "^2.1.0",
     "mongodb": "^6.17.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
     "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.5.2",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
