--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.5.0",
     "google": "^2.1.0",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.15.1",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
     "postcss": "^8.5.4",
