--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.9.1",
     "@vercel/analytics": "^1.5.0",
+    "axios": "^1.9.0",
     "google": "^2.1.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
