--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "resend": "^4.5.2",
+    "stripe": "^18.2.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
