--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.9.1",
     "@vercel/analytics": "^1.5.0",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
+    "bad-words": "^4.0.0",
     "google": "^2.1.0",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.15.1",
+    "mongoose": "^8.16.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
     "postcss": "^8.5.4",
